--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint" : "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "test" : "jest --config ./jest.config.json",
+    "test:watch": "npm run test -- --watch",
     "dev": "npm run start | npm run post-start",
     "post-start": "cd client && npm start",
-    "start": "node index.js",
-    "start:nodemon": "nodemon index.js",
-    "build":"cd client && npm run build",
+    "start": "node server/index.js",
+    "start:nodemon": "nodemon server/index.js",
+    "build": "cd client && npm run build",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "engines": {
@@ -29,5 +30,8 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "nunjucks": "^3.2.2"
+  },
+  "devDependencies": {
+    "jest": "^26.1.0"
   }
 }
