--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test" : "jest --config ./jest.config.json",
+    "test": "jest --config ./jest.config.json",
     "test:watch": "npm run test -- --watch",
     "dev": "npm run start | npm run post-start",
     "post-start": "cd client && npm start",
@@ -22,16 +22,17 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "nunjucks": "^3.2.2"
   },
   "devDependencies": {
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.1.0"
   }
 }
