--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
+    "config": "^3.3.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "nunjucks": "^3.2.2"
@@ -34,5 +36,10 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.1.0"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "mapbox/public/"
+    ]
   }
 }
