--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node server/index.js",
     "start:nodemon": "nodemon server/index.js",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd client && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "engines": {
     "node": "12.x"
