--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,9 @@
     "@babel/core": "7.9.0",
     "@material-ui/core": "^4.11.0",
     "@svgr/webpack": "4.3.3",
+    "@testing-library/dom": "^7.21.7",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^7.2.1",
     "@turf/bbox": "^6.0.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
